# gifcopier

./: .gitignore  README.md  cmake.yml
.github/workflows/: cmake.yml
app/: CMakeLists.txt  app_mac.mm  app_test.cpp  app_win.cpp  clip_file.cpp  clipapp.cpp  clipapp.h
extension/: com.syanth.clipcopier.json  com.syanth.gifcopier.chrome.json  com.syanth.gifcopier.json  package-lock.json  package.bat  package.json  package.sh
extension/src/: background.js  manifest.chrome.json  manifest.firefox.json  manifest.json
extension/src/options/: options.css  options.html
install/: com.syanth.gifcopier.chrome.json  com.syanth.gifcopier.chrome.mac.json  com.syanth.gifcopier.edge.json  com.syanth.gifcopier.edge.mac.json  com.syanth.gifcopier.firefox.json  com.syanth.gifcopier.firefox.mac.json  icon.pdn  install.cmd  install.command  install.ps1  uninstall.cmd
